backgroundattachment: fixed issue on mobile

--- a/CSS/services.css
+++ b/CSS/services.css
@@ -258,7 +258,7 @@ html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   display: flex;
   align-items: center;
   height: 90vh;
@@ -461,7 +461,7 @@ html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 
   display: flex;
   align-items: center;
@@ -494,7 +494,7 @@ html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 
   display: flex;
   align-items: center;
@@ -519,7 +519,7 @@ html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   display: flex;
   align-items: center;
 }
@@ -543,7 +543,7 @@ html {
   background-size: cover;
   background-position: center; /* Default for larger screens */
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 
   display: flex;
   align-items: center;
@@ -595,7 +595,6 @@ html {
   background-size: cover;
   background-position: center; /* Default for larger screens */
   background-repeat: no-repeat;
-  background-attachment: fixed;
 
   display: flex;
   align-items: center;
